AC_INIT([Adll], [1.0], [audin_j@epita.fr])
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

AC_ARG_ENABLE(gtk,
              [  --disable-gtk           don't look for GTK  libraries],
              enable_gtk=$enableval, 
              enable_gtk="yes")


AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_RANLIB
AM_C_PROTOTYPES
AC_C_CONST
AC_C_INLINE

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h pty.h strings.h  sys/time.h unistd.h stdint.h)


ALL_LINGUAS="fr"
AM_GNU_GETTEXT
AM_GNU_GETTEXT_VERSION(0.14.1)
GETTEXT_PACKAGE="Adll"
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Package name for gettext])


AC_CHECK_FUNCS(strdup printf vsprintf)

dnl Checks for getopt in standard library
AC_CHECK_FUNCS(getopt_long,,
[
        AC_LIBOBJ(getopt)
        AC_LIBOBJ(getopt1)
])

detected_gtk="yes"
if test "x$enable_gtk" = "xyes" ; then
  AM_PATH_GTK_2_0(2.4.0,,detected_gtk="no")
fi
if test "x$detected_gtk" = "xno" ; then
  enable_gtk="no"
else
  AC_DEFINE(SUPPORT_GTK, 1, [Support gtk Actived])
fi

PKG_CHECK_MODULES(xml, [libxml-2.0 >= 2.4])

dnl Doxygen Documentation
AC_PATH_PROG(DOXYGEN, doxygen, no)

UI_SOURCE=""
if test "x$enable_gtk" = "xyes" ; then
  UI_SOURCE="ui.o callbacks.o"
fi
AC_SUBST(UI_SOURCE)
dnl AM_CONDITIONAL([COMPILE_GTK], [test "x$enable_gtk" = "xyes"])

localedir=${datadir}/locale
AC_SUBST(localedir)

AC_OUTPUT([
Makefile
Doxyfile
intl/Makefile
m4/Makefile 
po/Makefile.in
src/Makefile
include/Makefile
lib/Makefile
lib/dlist/Makefile
lib/ntree/Makefile
])
echo
echo $PACKAGE $VERSION
echo
if test "x$detected_gtk" = "xno" ; then
echo Warning : GTK Librarie not found !
echo
fi
echo Build GTK support : $enable_gtk
echo
eval eval echo Adll will be installed in $bindir.
echo
echo configure complete, now type \'make\'
echo

